<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.amgad.amgadcallsmessages.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/textView_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_phoneNumber"
        android:layout_weight="6"/>

    <EditText
        android:id="@+id/editText_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_weight="1"
        android:inputType="phone"
        android:hint="@string/editText_phoneNumber"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_call"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_call"
            android:background="@color/colorAccent"
            android:onClick="call"/>

        <Button
            android:id="@+id/button_openPhoneToCall"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_openPhoneToCall"
            android:background="@color/orange500"
            android:onClick="openPhoneToCall"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_sendMessage"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/button_sendMessage"
        android:background="@color/gray500"
        android:onClick="sendMessage"/>
</LinearLayout>
